[package]
name = "test_drive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
scraper = "*"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
home = "0.5.3"
regex = "1.5.4"
