[package]
name = "test_drive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
scraper = "*"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
regex = "1.5.4"
directories = "4.0.1"
